<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_menu"
        app:layout_constraintEnd_toStartOf="@id/yearEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:layout_weight="1"
            android:textStyle="bold"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/yearEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:hint="@string/hint_year"
        android:inputType="number"
        android:text=""
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/titleEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/menu"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:hint="@string/hint_title"
        android:text=""
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="@drawable/search"
        android:contentDescription="@string/search_button_description"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/titleEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleEditText"
        app:layout_constraintTop_toBottomOf="@+id/yearEditText" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/alien_poster"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movieListRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            app:layout_constraintTop_toBottomOf="@id/titleEditText"
            tools:itemCount="2"
            tools:layout_editor_absoluteX="1dp"
            tools:listitem="@layout/fragment_item_movie_list" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>